Fix navbar bug on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,11 +34,13 @@ header {
     display: flex;
     justify-content: space-between;
     align-items: baseline;
+    height: 98px;
     
 }
 header a {
     text-decoration: none;
     color: inherit;
+  
 }
 .wrapper {
     width: 100%;
@@ -48,7 +50,7 @@ header a {
 #menu {
     font-size: 100%;
     letter-spacing: 2px;
-    list-style-type: none;
+    
     
 }
 #menu > li {
@@ -67,7 +69,8 @@ nav {
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
-    top: 100%;
+    top: 92px;
+    z-index: 1000;
 }
 /* Nav toggle */
 #nav-toggle:checked~nav {
@@ -79,18 +82,6 @@ nav {
 .nav-toggle-label {
     font-size: 2rem;
     padding-top: 0.5rem;
-}
-/*Navbar style with dropdown toggle*/
-nav {
-    position: absolute;
-    background-color: #ffffff;
-    width: 100%;
-    left: 0;
-    padding: 0 1rem;
-    box-shadow: 0 2px 2px #3a3a3a;
-    display: none;
-    top: 100%;
-    
 }
  
 #email {
@@ -109,6 +100,15 @@ nav {
 .nav-toggle-label {
     font-size: 2rem;
 }
+
+#menu {
+    display: flex;
+    flex-direction: column;
+}
+#menu > li {
+    padding-left: 5px;
+}
+
 /* Main Section*/
 main {
     background-color: #DADFF7;
@@ -294,6 +294,7 @@ footer >h3 {
 footer p {
     text-align: center;
     font-size: 25px;
+    margin: 0;
 }
 
 /*Media Queries/*
@@ -307,18 +308,24 @@ footer p {
         width: fit-content;
         padding-right: 1rem;
     }
-    #menu {
-        display: flex;
-    }
-    #menu > li {
-        padding-left: 1rem;
-    }
-
+   
     #nav-toggle:checked~nav {
         display: block;
     }
     .nav-toggle-label {
         display:none
+    }
+
+    #menu {
+        font-size: 100%;
+        letter-spacing: 2px;
+        
+        
+    }
+    #menu > li {
+        margin-bottom: 1em;
+        
+       
     }
     #logo {
         font-size: 125%;
